# zed-mjml

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  extension.toml  release-please-config.json  test.mjml
.claude/: settings.local.json
.github/actions/prepare/: action.yaml
.github/workflows/: deploy.yaml  pr.yaml  release.yaml  release.yml
crates/mjml-lsp/: Cargo.toml
crates/mjml-lsp/src/: code_action.rs  completion.rs  hover.rs  main.rs  preview.rs  rules.rs  scanner.rs  tests.rs  validate.rs
docs/plans/: 2026-03-07-mjml-lsp-design.md  2026-03-07-mjml-lsp-implementation.md  2026-03-07-mjml-validation-rules-design.md  2026-03-07-mjml-validation-rules-implementation.md
grammars/: html.wasm
languages/mjml/: config.toml  highlights.scm  injections.scm
snippets/: mjml.json
src/: lib.rs
test/invalid/: bad-xml.mjml  combined.mjml  default.mjml  nesting.mjml  no-root.mjml  required-attrs.mjml  singletons.mjml  text-in-image.mjml  unclosed-tag.mjml  unknown-tags.mjml
test/valid/: default.mjml  full.mjml  head-only.mjml  minimal.mjml
