[package]
name = "mjml-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "mjml-lsp"
path = "src/main.rs"

[dependencies]
mrml = "6"
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "forbid"
